--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,15 +65,8 @@ services:
     image: n8nio/n8n:latest
     container_name: communication_n8n
     environment:
-      - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER=admin
-      - N8N_BASIC_AUTH_PASSWORD=admin
-      
-      - N8N_PORT=5678              
-      - N8N_PROTOCOL=http
-      - N8N_HOST=localhost
-      - WEBHOOK_URL=http://localhost:5678/
-      - N8N_EDITOR_BASE_URL=http://localhost:5678/
+      .env_file: 
+        - .env
     volumes:
       - n8n_data:/home/node/.n8n      
     ports:
