--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,9 +64,8 @@ services:
   n8n:
     image: n8nio/n8n:latest
     container_name: communication_n8n
-    environment:
-      .env_file: 
-        - .env
+    env_file:
+      - .env
     volumes:
       - n8n_data:/home/node/.n8n      
     ports:
